# opg-data-lpa-instructions-preferences

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  Makefile  README.md  dl.py  docker-compose.yml  package-lock.json  renovate.json
lambdas/image_processor/form-tools/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt
lambdas/image_processor/form-tools/.github/workflows/: gh-deploy.yml  lint.yml  test.yml
lambdas/image_processor/form-tools/docs/api/extractors/: pdf.md
lambdas/image_processor/form-tools/docs/guide/: config.md  extract.md  metadata.md  process.md
lambdas/image_processor/form-tools/form_tools/: __init__.py  command_line.py
lambdas/image_processor/form-tools/form_tools/form_meta/: __init__.py  form_field.py  form_meta.py
lambdas/image_processor/form-tools/form_tools/form_operators/: bounding_box_operator.py  form_operator.py  form_page_operator.py  operator_configs.py  preprocessors.py
lambdas/image_processor/form-tools/form_tools/utils/: constants.py  image_reader.py
lambdas/image_processor/form-tools/notebooks/: form_tools_demo.ipynb
lambdas/image_processor/form-tools/tests/tests_end2end/: test_end2end.py
lambdas/image_request_handler/: Dockerfile  Dockerfile-tests  image-request-handler.md  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh
lambdas/image_request_handler/app/: handler.py
lambdas/image_request_handler/app/utility/: custom_logging.py
lambdas/image_request_handler/tests/: handler_test.py
(+223 files in other folders)
