[project]
name = "image-request-handler"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "boto3==1.42.68",
    "awslambdaric==3.1.1",
    "setuptools==80.10.2",
    "imageio==2.37.3",
    "aws-xray-sdk==2.15.0",
]

[dependency-groups]
dev = [
    "moto==5.1.22",
    "pytest==9.0.3",
]

[tool.uv]
package = false
